# prescriber-ontology

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  actions.yaml  docker-compose.yml  metrics.yaml  pyproject.toml
auth/keycloak/realms/: ontology-dev-realm.json
auth/policies/: actions.rego  helpers.rego  tools.rego
db/neo4j/init/: constraints.cypher
db/postgres/migrations/: 0001_init.sql  0002_actions.sql  0003_events.sql  0004_telemetry.sql  0005_lineage.sql  0006_pgvector.sql  0007_idempotency.sql  0008_auth.sql
docs/: Prescriber_Knowledge_Platform_5pg_v2.pptx  actions-plan.md  architecture-diagram.md  auth-plan.md  demo.md  events-plan.md  features.md
joe-enhancements/: agent-response-md-rendering-enhancement-plan.md  ontology-graph-presentation-explainer-enhancement.md
queries/: brands_per_generic.cypher  city_prescriber_counts.cypher  co_prescribed.cypher  costly_specialties.cypher  drug_top_prescribers.cypher  prescriber_drugs.cypher  prescriber_overview.cypher  specialty_drug_breakdown.cypher  top_prescribers_by_claims.cypher
src/ontology/: cli.py  config.py  db.py  embeddings.py  lineage.py  queries.py  verify.py
src/ontology/ingest/mesh/: fetch.py  hierarchy.py  load.py  parse.py
src/ontology/project/: to_neo4j.py
web/: Dockerfile  actions.go  actions_ui.go  auth.go  consumers.go  embeddings.go  events.go  go.mod  go.sum  graph_viz.go  lineage.go  lineage_ui.go  main.go  mcp.go  metrics.go  opa.go  telemetry.go  telemetry_ui.go  tools.go
web/templates/: actions.html  index.html  lineage.html  telemetry.html
(+3 files in other folders)
