[project]
name = "ontology"
version = "0.1.0"
description = "Hybrid Postgres + Neo4j ontology system"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary,pool]>=3.2",
    "neo4j>=5.20",
    "httpx>=0.27",
    "lxml>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "tqdm>=4.66",
    "openai>=1.50",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "mypy>=1.10",
]

[project.scripts]
ontology = "ontology.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ontology"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
